maint: change all VW measurements to % instead to prevent horizontal scrollbar, tweaked background to linear gradient

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,11 +13,15 @@ font-family: 'Quicksand', sans-serif; */
     font-family: 'Quicksand', sans-serif;
     background-origin: border-box;
     box-sizing: border-box;
-    background-color: rgb(247, 242, 231);
+    /* background-color: rgb(247, 242, 231); */
+}
+
+body {
+    background: linear-gradient(0deg, rgb(218, 197, 154), rgb(247, 242, 231), rgb(247, 242, 231));
 }
 
 .maincontent {
-    width: 100vw;
+    width: 100%;
     height: 100%;
 }
 
@@ -262,7 +266,7 @@ span a:hover::before {
 #heroimage {
     overflow: hidden;
     height: 480px;
-    width: 100vw;
+    width: 100%;
     /* background-color: blue; */
     background: url('../images/HeroImage2.jpg') no-repeat center center;
     background-size: cover;
@@ -437,7 +441,7 @@ legend {
 .whitespace {
     clear: left;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 60px;
     /* background-color: chartreuse; DEBUG*/
 }
@@ -446,7 +450,7 @@ legend {
 
 form {
     /* background-color: blue; DEBUG*/
-    width: 60vw;
+    width: 60%;
     height: auto;
     padding-bottom: 30px;
     margin-left: 20%;
@@ -458,7 +462,7 @@ form {
 
 .contactform {
     position: relative;
-    width: 100vw;
+    width: 100%;
     height: 100%;
     /* background-color: rgb(146, 0, 0); DEBUG*/
     text-align: center;
@@ -528,7 +532,7 @@ textarea {
     }
 
     form {
-        width: 40vw;
+        width: 40%;
         margin-left: 30%;
         font-size: 24px;
     }
@@ -625,7 +629,7 @@ textarea {
     }
 
     form {
-        width: 80vw;
+        width: 80%;
         margin-left: 10%;
         font-size: 16px;
     }
